Changed methods in Normalizer, Atom and Loader according to checkstyle feedback